--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -18,7 +18,7 @@
   --color-white: #fff;
   --color-light: rgba(255, 255, 255, 0.6);
 
-  --transition: all 400 ease;
+  --transition: all 400ms ease;
 
   --container-width-lg: 75%;
   --container-width-md: 86%;
@@ -57,6 +57,7 @@ h1 {
 
 section {
   margin-top: 8rem;
+  /* height: 100vh; */
 }
 
 section > h2, section > h5 {
@@ -76,10 +77,6 @@ section > h2 {
 a {
   color: var(--color-primary);
   transition: var(--transition);
-  -webkit-transition: var(--transition);
-  -moz-transition: var(--transition);
-  -ms-transition: var(--transition);
-  -o-transition: var(--transition);
 }
 
 a:hover {
